Have fixed styles for the portfolio page. Need to make more responsive, add heading to desktop view.

--- a/public/about.html
+++ b/public/about.html
@@ -100,6 +100,7 @@
                                     <span class="skill grey">C#</span> <span class="skill grey">ASP.NET</span>
                                     <span class="skill grey"> SQL </span> <span class="skill grey"> NoSQL </span>
                                     <span class="skill grey"> PHP</span> <span class="skill grey">Laravel </span>
+                                    <span class="skill grey"> DevOps</span>
                                     <span class="skill grey"> Node.js </span> <span class="skill grey"> Git </span>
                                 </div>
                             </div>
