Made portfolio page responsive and switches dynamic based on tallest item.

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -49,7 +49,10 @@
                     </nav>
                     <div class="columns col-xs-12">
                         <div class="left-column clearfix col-xs-12 col-sm-6 white">
-                            <div class='project write-up'>
+                            <!-- <div class="heading hidden-xs">
+                                <h1> Experience </h1>
+                            </div> -->
+                            <div id="seabreeze" class='project write-up'>
                                 <div class='visible-xs'>
                                     <img src="/images/seabreeze-connect.png" alt="Seabreeze Connect screenshots"/>
                                 </div>
@@ -70,16 +73,8 @@
                                     Was responsible for database design, security, testing, information architecture.
                                     Created responsive web app using Angular Material Design and Laravel.
                                  </p>
-                                <div class="switches visible-xs">
-                                    <div class="switch-up col-xs-6 teal">
-                                        <i class="fa fa-arrow-up center" aria-hidden="true"></i>
-                                    </div>
-                                    <div class="switch-down col-xs-6 darkblue">
-                                        <i class="fa fa-arrow-down center" aria-hidden="true"></i>
-                                    </div>
-                                </div>
                             </div>
-                            <div class='project write-up'>
+                            <div id="art-van" class='project write-up'>
                                 <div class='visible-xs'>
                                     <img src="/images/art-vancouver.png" alt="Art!Vancouver screenshots"/>
                                 </div>
@@ -109,14 +104,6 @@
                             </div>
                         </div>
                         <div class="right-column clearfix col-xs-12 col-sm-6 light-grey hidden-xs">
-                            <div class="switches">
-                                <div class="switch-up col-xs-6 teal">
-                                    <i class="fa fa-arrow-up center" aria-hidden="true"></i>
-                                </div>
-                                <div class="switch-down col-xs-6 darkblue">
-                                    <i class="fa fa-arrow-down center" aria-hidden="true"></i>
-                                </div>
-                            </div>
                             <div class='project'>
                                 <img src="/images/art-vancouver.png" alt="Art!Vancouver screenshots"/>
                             </div>
@@ -124,6 +111,14 @@
                                 <img src="/images/seabreeze-connect.png" alt="Seabreeze Connect screenshots"/>
                             </div>
 
+                        </div>
+                        <div class="switches">
+                            <div class="switch-up col-xs-6 teal">
+                                <i class="fa fa-arrow-up center" aria-hidden="true"></i>
+                            </div>
+                            <div class="switch-down col-xs-6 darkblue">
+                                <i class="fa fa-arrow-down center" aria-hidden="true"></i>
+                            </div>
                         </div>
                     </div>
 
