Added in CreationAcademy project. Need to finalize desktop styles.

--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title> Matt Catellier - About Me</title>
+        <title> Matt Catellier - About </title>
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 
         <!-- jQuery 2.2.0 -->
