--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title> Matt Catellier - Contact Info </title>
+        <title> Matt Catellier - Contact </title>
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 
         <!-- jQuery 2.2.0 -->
