--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title> Matt Catellier - What I Do</title>
+        <title> Matt Catellier - Experience</title>
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 
         <!-- jQuery 2.2.0 -->
@@ -52,21 +52,21 @@
                             <!-- <div class="heading hidden-xs">
                                 <h1> Experience </h1>
                             </div> -->
-                            <div id="seabreeze" class='project write-up'>
+                            <div class='project write-up'>
                                 <div class='visible-xs'>
                                     <img src="/images/seabreeze-connect.png" alt="Seabreeze Connect screenshots"/>
                                 </div>
                                 <h2> Seabreeze Connect </h2>
                                 <h1>
                                     <span class="skill teal"> Angular </span>
-                                    <span class="skill teal"> Material Design </span>
+                                    <span class="skill teal"> Material </span>
                                     <span class="skill teal"> SASS </span> <br />
                                     <span class="skill grey"> Git </span>
                                     <span class="skill grey"> Laravel </span>
                                     <span class="skill grey"> MySQL </span>
                                 </h1>
                                 <div class="view-site">
-                                    <a href="http://seabreezeconnect.com/" class="view-site"> VIEW SITE </a>
+                                    <a href="http://seabreezeconnect.com/" class="view-site"> VIEW SPLASH PAGE </a>
                                 </div>
 
                                 <p> Worked with product owner to identify and prioritize key features.
@@ -74,7 +74,7 @@
                                     Created responsive web app using Angular Material Design and Laravel.
                                  </p>
                             </div>
-                            <div id="art-van" class='project write-up'>
+                            <div class='project write-up'>
                                 <div class='visible-xs'>
                                     <img src="/images/art-vancouver.png" alt="Art!Vancouver screenshots"/>
                                 </div>
@@ -87,12 +87,34 @@
                                     <span class="skill grey"> DevOps</span>
                                 </h1>
                                 <div class="view-site">
-                                    <a href="http://artvancouver.net/" class="view-site"> VIEW SITE </a>
+                                    <a href="http://artvancouver.net/" class="view-site"> VIEW LIVE SITE </a>
                                 </div>
 
                                 <p> Created a child theme using Wordpress, to add in a mobile responsive
                                      nav-bar and improve the overall usability of the app.</p>
 
+                            </div>
+                            <div class='project write-up'>
+                                <div class='visible-xs'>
+                                    <img src="/images/creation-academy.jpg" alt="Creation Academy screenshots"/>
+                                </div>
+                                <h2> Creation Techonologies </h2>
+                                <h1>
+                                    <span class="skill teal"> CSS </span>
+                                    <span class="skill teal"> Javascript </span>
+                                    <span class="skill teal"> TFS </span><br />
+                                    <span class="skill grey"> C# </span>
+                                    <span class="skill grey"> SQLServer </span>
+                                    <span class="skill grey"> Sharepoint </span>
+
+                                </h1>
+                                <div class="view-site">
+                                    <a href="http://www.creationtech.com/" class="view-site"> VIEW COMPANY SITE </a>
+                                </div>
+                                <p> Created a web app to share videos across the company. Increased the visibility
+                                     of ongoing projects, and improved efficiency of training process. Participated
+                                     in daily SCRUM meetings with development team.
+                                 </p>
                             </div>
                             <div class="switches visible-xs">
                                 <div class="switch-up col-xs-6 teal">
@@ -109,6 +131,9 @@
                             </div>
                             <div class='project'>
                                 <img src="/images/seabreeze-connect.png" alt="Seabreeze Connect screenshots"/>
+                            </div>
+                            <div class='project'>
+                                <img src="/images/creation-academy.jpg" alt="Creation Academy screenshots"/>
                             </div>
 
                         </div>
