Finalized styles on portfolio page. Redo the write up with linked in write up.

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -54,24 +54,24 @@
                             </div> -->
                             <div class='project write-up'>
                                 <div class='visible-xs'>
-                                    <img src="/images/seabreeze-connect.png" alt="Seabreeze Connect screenshots"/>
+                                    <img src="/images/creation-academy.jpg" alt="Creation Academy screenshots"/>
                                 </div>
-                                <h2> Seabreeze Connect </h2>
+                                <h2> Creation Techonologies </h2>
                                 <h1>
-                                    <span class="skill teal"> Angular </span>
-                                    <span class="skill teal"> Material </span>
-                                    <span class="skill teal"> SASS </span> <br />
-                                    <span class="skill grey"> Git </span>
-                                    <span class="skill grey"> Laravel </span>
-                                    <span class="skill grey"> MySQL </span>
+                                    <span class="skill teal"> CSS </span>
+                                    <span class="skill teal"> Javascript </span>
+                                    <span class="skill teal"> TFS </span><br />
+                                    <span class="skill grey"> C# </span>
+                                    <span class="skill grey"> SQLServer </span>
+                                    <span class="skill grey"> Sharepoint </span>
+
                                 </h1>
                                 <div class="view-site">
-                                    <a href="http://seabreezeconnect.com/" class="view-site"> VIEW SPLASH PAGE </a>
+                                    <a href="http://www.creationtech.com/" class="view-site"> VIEW COMPANY SITE </a>
                                 </div>
-
-                                <p> Worked with product owner to identify and prioritize key features.
-                                    Was responsible for database design, security, testing, information architecture.
-                                    Created responsive web app using Angular Material Design and Laravel.
+                                <p> Created a web app to share videos across the company. Increased the visibility
+                                     of ongoing projects, and improved efficiency of training process. Participated
+                                     in daily SCRUM meetings with development team.
                                  </p>
                             </div>
                             <div class='project write-up'>
@@ -96,26 +96,26 @@
                             </div>
                             <div class='project write-up'>
                                 <div class='visible-xs'>
-                                    <img src="/images/creation-academy.jpg" alt="Creation Academy screenshots"/>
+                                    <img src="/images/seabreeze-connect.png" alt="Seabreeze Connect screenshots"/>
                                 </div>
-                                <h2> Creation Techonologies </h2>
+                                <h2> Seabreeze Connect </h2>
                                 <h1>
-                                    <span class="skill teal"> CSS </span>
-                                    <span class="skill teal"> Javascript </span>
-                                    <span class="skill teal"> TFS </span><br />
-                                    <span class="skill grey"> C# </span>
-                                    <span class="skill grey"> SQLServer </span>
-                                    <span class="skill grey"> Sharepoint </span>
-
+                                    <span class="skill teal"> Angular </span>
+                                    <span class="skill teal"> Material </span>
+                                    <span class="skill teal"> SASS </span> <br />
+                                    <span class="skill grey"> Git </span>
+                                    <span class="skill grey"> Laravel </span>
+                                    <span class="skill grey"> MySQL </span>
                                 </h1>
                                 <div class="view-site">
-                                    <a href="http://www.creationtech.com/" class="view-site"> VIEW COMPANY SITE </a>
+                                    <a href="http://seabreezeconnect.com/" class="view-site"> VIEW SPLASH PAGE </a>
                                 </div>
-                                <p> Created a web app to share videos across the company. Increased the visibility
-                                     of ongoing projects, and improved efficiency of training process. Participated
-                                     in daily SCRUM meetings with development team.
+
+                                <p> Worked with product owner to prioritize key features.
+                                    Responsible for database design, authentication, testing, information architecture.
                                  </p>
                             </div>
+
                             <div class="switches visible-xs">
                                 <div class="switch-up col-xs-6 teal">
                                     <i class="fa fa-arrow-up center" aria-hidden="true"></i>
@@ -127,10 +127,10 @@
                         </div>
                         <div class="right-column clearfix col-xs-12 col-sm-6 light-grey hidden-xs">
                             <div class='project'>
-                                <img src="/images/art-vancouver.png" alt="Art!Vancouver screenshots"/>
+                                <img src="/images/seabreeze-connect.png" alt="Seabreeze Connect screenshots"/>
                             </div>
                             <div class='project'>
-                                <img src="/images/seabreeze-connect.png" alt="Seabreeze Connect screenshots"/>
+                                <img src="/images/art-vancouver.png" alt="Art!Vancouver screenshots"/>
                             </div>
                             <div class='project'>
                                 <img src="/images/creation-academy.jpg" alt="Creation Academy screenshots"/>
