--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div id="about-block" class="block col-xs-12 col-sm-6 col-lg-3 teal">
-                        <a href="about.html" class="clearfix">
+                        <a href="/about" class="clearfix">
                             <h1> ABOUT ME  </h1>
                             <div class="bio-icon center">
                                 <i class="fa fa-hand-peace-o" aria-hidden="true"></i>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div id="portfolio-block" class="block col-xs-12 col-sm-6 col-lg-3 white">
-                        <a href="portfolio.html">
+                        <a href="/expereince">
                             <h1> EXPERIENCE </h1>
                             <div class="experience-icon center">
                                 <i class="fa fa-laptop"></i>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div id="contact-block-main" class="block col-xs-12 col-sm-6 col-lg-3 hidden-lg teal">
-                        <a href="contact.html">
+                        <a href="/contact">
                             <h1> CONTACT INFO </h1>
                             <div class="contact-icon center">
                                 <i class="fa fa-paper-plane-o"></i>
@@ -133,7 +133,7 @@
                     <div class="block col-lg-3 visible-lg blank white">
                     </div>
                     <div id="contact-block" class="block col-lg-3 visible-lg darkblue">
-                        <a href="contact.html">
+                        <a href="/contact">
                             <h1> CONTACT INFO </h1>
                             <div class="contact-icon center">
                                 <i class="fa fa-paper-plane-o"></i>
