changed reference to css external css files, changed portfolio.html to experience.html

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -19,9 +19,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
         <!-- CUSTOM -->
-        <link rel="stylesheet" href="styles/site.css">
-        <link rel="stylesheet" href="styles/menu.css">
-        <link rel="stylesheet" href="styles/about.css">
+        <link rel="stylesheet" href="../styles/site.css">
+        <link rel="stylesheet" href="../styles/menu.css">
+        <link rel="stylesheet" href="../styles/about.css">
 
         <script src="build/app.js" defer></script>
         <script>
