--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -19,11 +19,11 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
         <!-- CUSTOM -->
-        <link rel="stylesheet" href="styles/site.css">
-        <link rel="stylesheet" href="styles/menu.css">
-        <link rel="stylesheet" href="styles/socail.css">
-        <link rel="stylesheet" href="styles/about.css">
-        <link rel="stylesheet" href="styles/contact.css">
+        <link rel="stylesheet" href="../styles/site.css">
+        <link rel="stylesheet" href="../styles/menu.css">
+        <link rel="stylesheet" href="../styles/socail.css">
+        <link rel="stylesheet" href="../styles/about.css">
+        <link rel="stylesheet" href="../styles/contact.css">
 
         <script src="build/app.js" defer></script>
         <script>
@@ -151,7 +151,7 @@
                             </div>
                         </div>
 
-                        <div class="right-column clearfix col-xs-12 col-sm-6 darkblue">
+                        <div class="right-column clearfix hidden-xs col-xs-12 col-sm-6 darkblue">
                             <div class="write-up">
                                 <h4>WANT TO GET IN TOUCH?</h4>
                                 <p> Send me an email with any ideas or questions you may have.</p>
