--- a/public/pages/experience.html
+++ b/public/pages/experience.html
@@ -19,10 +19,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
         <!-- CUSTOM -->
-        <link rel="stylesheet" href="styles/site.css">
-        <link rel="stylesheet" href="styles/menu.css">
-        <link rel="stylesheet" href="styles/about.css">
-        <link rel="stylesheet" href="styles/projects.css">
+        <link rel="stylesheet" href="../styles/site.css">
+        <link rel="stylesheet" href="../styles/menu.css">
+        <link rel="stylesheet" href="../styles/about.css">
+        <link rel="stylesheet" href="../styles/projects.css">
 
         <script src="build/app.js" defer></script>
         <meta name="viewport" content="width=device-width">
