--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -22,12 +22,12 @@
         <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'>
 
         <!-- CUSTOM -->
-        <link rel="stylesheet" href="styles/site.css">
-        <link rel="stylesheet" href="styles/menu.css">
-        <link rel="stylesheet" href="styles/logo.css">
-        <link rel="stylesheet" href="styles/welcome.css">
-        <link rel="stylesheet" href="styles/contact-icon.css">
-        <link rel="stylesheet" href="styles/socail.css">
+        <link rel="stylesheet" href="../styles/site.css">
+        <link rel="stylesheet" href="../styles/menu.css">
+        <link rel="stylesheet" href="../styles/logo.css">
+        <link rel="stylesheet" href="../styles/welcome.css">
+        <link rel="stylesheet" href="../styles/contact-icon.css">
+        <link rel="stylesheet" href="../styles/socail.css">
 
         <script src="build/app.js" defer></script>
         <style>
@@ -66,7 +66,7 @@
                     </div>
                     <div id="about-block" class="block col-xs-12 col-sm-6 col-lg-3 teal">
                         <a href="/about" class="clearfix">
-                            <h1> ABOUT ME  </h1>
+                            <h1> ABOUT </h1>
                             <div class="bio-icon center">
                                 <i class="fa fa-hand-peace-o" aria-hidden="true"></i>
                                 <h2 class="sliding-middle-out"></h2>
@@ -121,7 +121,7 @@
                     </div>
                     <div id="contact-block-main" class="block col-xs-12 col-sm-6 col-lg-3 hidden-lg teal">
                         <a href="/contact">
-                            <h1> CONTACT INFO </h1>
+                            <h1> CONTACT </h1>
                             <div class="contact-icon center">
                                 <i class="fa fa-paper-plane-o"></i>
                                 <h2 class="sliding-middle-out"></h2>
@@ -134,7 +134,7 @@
                     </div>
                     <div id="contact-block" class="block col-lg-3 visible-lg darkblue">
                         <a href="/contact">
-                            <h1> CONTACT INFO </h1>
+                            <h1> CONTACT </h1>
                             <div class="contact-icon center">
                                 <i class="fa fa-paper-plane-o"></i>
                                 <h2 class="sliding-middle-out"></h2>
