--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div id="portfolio-block" class="block col-xs-12 col-sm-6 col-lg-3 white">
-                        <a href="/expereince">
+                        <a href="/experience">
                             <h1> EXPERIENCE </h1>
                             <div class="experience-icon center">
                                 <i class="fa fa-laptop"></i>
