Finalized behaviour of portfolio page

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Matt Catellier - About </title>
-        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.png">
 
         <!-- jQuery 2.2.0 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -69,7 +69,7 @@
                     <div class="columns col-xs-12">
                         <div class="left-column clearfix col-xs-12 col-sm-6 white">
                             <div class="heading">
-                                <img src="images/headshot.jpg" alt="professional headshot">
+                                <img src="../images/headshot.jpg" alt="professional headshot">
                                 <h1>WHO I AM</h1>
                             </div>
                             <p>Born and raised in Vancouver, BC, Matt is a particularly hard working individual who has been practicing software development for the past 3 years. </p>
@@ -114,7 +114,7 @@
                             </div>
                             <div class="col-xs-12">
                                 <p> I enjoy working in all areas of development. What ever your projects needs, I am available for freelance, contract or direct client projects.</p>
-                                <p>Feel free to <a href="contact.html">send me and email here</a>.
+                                <p>Feel free to <a href="/contact">send me and email here</a>.
                             </div>
                         </div>
                     </div>
