--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Matt Catellier - Software Systems Developer </title>
-        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.png">
 
         <!-- jQuery 2.2.0 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -60,7 +60,7 @@
                     </nav>
                     <div id="logo-block" class="block col-xs-12 col-sm-6 col-lg-3 logo white">
                         <div class="logo center">
-                            <img src="images/logo.png" alt="logo">
+                            <img src="../images/logo.png" alt="logo">
                             <h1> Matt Catellier </h1>
                         </div>
                     </div>
