--- a/public/pages/experience.html
+++ b/public/pages/experience.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Matt Catellier - Experience</title>
-        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.png">
 
         <!-- jQuery 2.2.0 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
