--- a/public/pages/experience.html
+++ b/public/pages/experience.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="../styles/projects.css">
 
         <script src="build/app.js" defer></script>
+        <script src="../scripts/switch-effect.js" defer></script>
         <meta name="viewport" content="width=device-width">
     </head>
 
