--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -126,7 +126,7 @@
                                     </div> <br />
                                     <div class="message-container">
                                         <label for="message">Message:</label>
-                                        <textarea name="" id="message" cols="30" rows="10"></textarea>
+                                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
                                         <button type="submit" id="submitBtn" class="btn"> SEND </button>
                                     </div>
                                 </form>
