Added clearfix to image wrapper to try and solve height issue.

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -48,7 +48,7 @@
                     </nav>
                     <div class="columns col-xs-12">
                         <div class="left-column clearfix col-xs-12 col-sm-6 white">
-                            <div class="heading">
+                            <div class="heading clearfix">
                                 <img src="../images/headshot.jpg" alt="professional headshot">
                                 <h1>WHO I AM</h1>
                             </div>
