Changed lifecycle hook to window.onload

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -48,7 +48,7 @@
                     </nav>
                     <div class="columns col-xs-12">
                         <div class="left-column clearfix col-xs-12 col-sm-6 white">
-                            <div class="heading clearfix">
+                            <div class="heading">
                                 <img src="../images/headshot.jpg" alt="professional headshot">
                                 <h1>WHO I AM</h1>
                             </div>
@@ -105,8 +105,8 @@
                 <p> Copyright © Matt Catellier 2016. </p>
             </div>
         </div>
-        <script>
-            $(document).ready(function() {
+        <script type="text/javascript">
+            $(window).load(function() {
                 resizePanel();
                 $(window).resize(resizePanel);
                 function resizePanel() {
