--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -140,8 +140,8 @@
                 <p> Copyright © Matt Catellier 2016.</p>
             </div>
         </div>
-        <script>
-            $(document).ready(function() {
+        <script type="text/javascript">
+            $(window).load(function() {
                 resizePanel();
                 $(window).resize(resizePanel);
                 function resizePanel() {
@@ -172,7 +172,7 @@
                         console.log(res);
                     });
                 }
-            });        
+            });
         </script>
     </body>
 
